// Code generated by codegen. DO NOT EDIT.
syntax = "proto3";
package dmltestgenerated;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "github.com/weiwolves/pkg/storage/null/null.proto";
option go_package = "dmltestgenerated";
option (gogoproto.typedecl_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
// CatalogProductIndexEAVDecimalIDX represents a single row for
// catalog_product_index_eav_decimal_idx DB table. Auto generated.
// Table comment: Catalog Product EAV Decimal Indexer Index Table
message CatalogProductIndexEAVDecimalIDX {
	uint32 EntityID = 1 ;
	uint32 AttributeID = 2 ;
	uint32 StoreID = 3 ;
	uint32 SourceID = 4 ;
	null.Decimal Value = 5 [(gogoproto.nullable)=false];
}
// CatalogProductIndexEAVDecimalIDXes represents multiple rows for the
// catalog_product_index_eav_decimal_idx DB table. Auto generated.
message CatalogProductIndexEAVDecimalIDXes {
	repeated CatalogProductIndexEAVDecimalIDX Data = 1;
}
// CoreConfiguration represents a single row for core_configuration DB table.
// Auto generated.
// Table comment: Config Data
message CoreConfiguration {
	uint32 ConfigID = 1 ;
	string Scope = 2 ;
	int32 ScopeID = 3 ;
	null.Time Expires = 4 [(gogoproto.nullable)=false];
	string Path = 5 ;
	null.String Value = 6 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp VersionTs = 7 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	google.protobuf.Timestamp VersionTe = 8 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
}
// CoreConfigurations represents multiple rows for the core_configuration DB
// table. Auto generated.
message CoreConfigurations {
	repeated CoreConfiguration Data = 1;
}
// CustomerAddressEntity represents a single row for customer_address_entity DB
// table. Auto generated.
// Table comment: Customer Address Entity
message CustomerAddressEntity {
	uint32 EntityID = 1 ;
	null.String IncrementID = 2 [(gogoproto.nullable)=false];
	null.Uint32 ParentID = 3 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp CreatedAt = 4 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	google.protobuf.Timestamp UpdatedAt = 5 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	bool IsActive = 6 ;
	string City = 7 ;
	null.String Company = 8 [(gogoproto.nullable)=false];
	string CountryID = 9 ;
	null.String Fax = 10 [(gogoproto.nullable)=false];
	string Firstname = 11 ;
	string Lastname = 12 ;
	null.String Middlename = 13 [(gogoproto.nullable)=false];
	null.String Postcode = 14 [(gogoproto.nullable)=false];
	null.String Prefix = 15 [(gogoproto.nullable)=false];
	null.String Region = 16 [(gogoproto.nullable)=false];
	null.Uint32 RegionID = 17 [(gogoproto.nullable)=false];
	string Street = 18 ;
	null.String Suffix = 19 [(gogoproto.nullable)=false];
	string Telephone = 20 ;
	null.String VatID = 21 [(gogoproto.nullable)=false];
	null.Bool VatIsValid = 22 [(gogoproto.nullable)=false];
	null.String VatRequestDate = 23 [(gogoproto.nullable)=false];
	null.String VatRequestID = 24 [(gogoproto.nullable)=false];
	null.Uint32 VatRequestSuccess = 25 [(gogoproto.nullable)=false];
}
// CustomerAddressEntities represents multiple rows for the
// customer_address_entity DB table. Auto generated.
message CustomerAddressEntities {
	repeated CustomerAddressEntity Data = 1;
}
// CustomerEntity represents a single row for customer_entity DB table. Auto
// generated.
// Table comment: Customer Entity
message CustomerEntity {
	uint32 EntityID = 1 ;
	null.Uint32 WebsiteID = 2 [(gogoproto.nullable)=false];
	null.String Email = 3 [(gogoproto.nullable)=false];
	uint32 GroupID = 4 ;
	null.String IncrementID = 5 [(gogoproto.nullable)=false];
	null.Uint32 StoreID = 6 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp CreatedAt = 7 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	google.protobuf.Timestamp UpdatedAt = 8 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	bool IsActive = 9 ;
	uint32 DisableAutoGroupChange = 10 ;
	null.String CreatedIn = 11 [(gogoproto.nullable)=false];
	null.String Prefix = 12 [(gogoproto.nullable)=false];
	null.String Firstname = 13 [(gogoproto.nullable)=false];
	null.String Middlename = 14 [(gogoproto.nullable)=false];
	null.String Lastname = 15 [(gogoproto.nullable)=false];
	null.String Suffix = 16 [(gogoproto.nullable)=false];
	null.Time Dob = 17 [(gogoproto.nullable)=false];
	null.String RpToken = 19 [(gogoproto.nullable)=false];
	null.Time RpTokenCreatedAt = 20 [(gogoproto.nullable)=false];
	null.Uint32 DefaultBilling = 21 [(gogoproto.nullable)=false];
	null.Uint32 DefaultShipping = 22 [(gogoproto.nullable)=false];
	null.String Taxvat = 23 [(gogoproto.nullable)=false];
	null.String Confirmation = 24 [(gogoproto.nullable)=false];
	null.Uint32 Gender = 25 [(gogoproto.nullable)=false];
	null.Int32 FailuresNum = 26 [(gogoproto.nullable)=false];
	null.Time FirstFailure = 27 [(gogoproto.nullable)=false];
	null.Time LockExpires = 28 [(gogoproto.nullable)=false];
	CustomerAddressEntities CustomerAddressEntities = 29 ; // Reversed 1:M customer_entity.entity_id => customer_address_entity.parent_id
}
// CustomerEntities represents multiple rows for the customer_entity DB table.
// Auto generated.
message CustomerEntities {
	repeated CustomerEntity Data = 1;
}
// DmlgenTypes represents a single row for dmlgen_types DB table. Auto generated.
message DmlgenTypes {
	int32 ID = 1 ;
	null.Int64 ColBigint1 = 2 [(gogoproto.nullable)=false];
	int64 ColBigint2 = 3 ;
	null.Uint64 ColBigint3 = 4 [(gogoproto.nullable)=false];
	uint64 ColBigint4 = 5 ;
	bytes ColBlob = 6 ;
	null.Time ColDate1 = 7 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp ColDate2 = 8 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	null.Time ColDatetime1 = 9 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp ColDatetime2 = 10 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	null.Decimal ColDecimal101 = 11 [(gogoproto.nullable)=false];
	null.Decimal ColDecimal124 = 12 [(gogoproto.nullable)=false];
	null.Decimal PriceA124 = 13 [(gogoproto.nullable)=false];
	null.Decimal PriceB124 = 14 [(gogoproto.nullable)=false];
	null.Decimal ColDecimal123 = 15 [(gogoproto.nullable)=false];
	null.Decimal ColDecimal206 = 16 [(gogoproto.nullable)=false];
	null.Decimal ColDecimal2412 = 17 [(gogoproto.nullable)=false];
	null.Int32 ColInt1 = 18 [(gogoproto.nullable)=false];
	int32 ColInt2 = 19 ;
	null.Uint32 ColInt3 = 20 [(gogoproto.nullable)=false];
	uint32 ColInt4 = 21 ;
	null.String ColLongtext1 = 22 [(gogoproto.nullable)=false];
	string ColLongtext2 = 23 ;
	bytes ColMediumblob = 24 ;
	null.String ColMediumtext1 = 25 [(gogoproto.nullable)=false];
	string ColMediumtext2 = 26 ;
	null.Int32 ColSmallint1 = 27 [(gogoproto.nullable)=false];
	int32 ColSmallint2 = 28 ;
	null.Uint32 ColSmallint3 = 29 [(gogoproto.nullable)=false];
	uint32 ColSmallint4 = 30 ;
	bool HasSmallint5 = 31 ;
	null.Bool IsSmallint5 = 32 [(gogoproto.nullable)=false];
	null.String ColText = 33 [(gogoproto.nullable)=false];
	google.protobuf.Timestamp ColTimestamp1 = 34 [(gogoproto.stdtime)=true,(gogoproto.nullable)=false];
	null.Time ColTimestamp2 = 35 [(gogoproto.nullable)=false];
	int32 ColTinyint1 = 36 ;
	string ColVarchar1 = 37 ;
	null.String ColVarchar100 = 38 [(gogoproto.nullable)=false];
	string ColVarchar16 = 39 ;
	null.String ColChar1 = 40 [(gogoproto.nullable)=false];
	string ColChar2 = 41 ;
}
// DmlgenTypesCollection represents multiple rows for the dmlgen_types DB table.
// Auto generated.
message DmlgenTypesCollection {
	repeated DmlgenTypes Data = 1;
}
// SalesOrderStatusState represents a single row for sales_order_status_state DB
// table. Auto generated.
// Table comment: Sales Order Status Table
message SalesOrderStatusState {
	string Status = 1 ;
	string State = 2 ;
	bool IsDefault = 3 ;
	uint32 VisibleOnFront = 4 ;
}
// SalesOrderStatusStates represents multiple rows for the
// sales_order_status_state DB table. Auto generated.
message SalesOrderStatusStates {
	repeated SalesOrderStatusState Data = 1;
}
// ViewCustomerAutoIncrement represents a single row for
// view_customer_auto_increment DB table. Auto generated.
// Table comment: VIEW
message ViewCustomerAutoIncrement {
	uint32 CeEntityID = 1 ;
	null.String Email = 2 [(gogoproto.nullable)=false];
	string Firstname = 3 ;
	string Lastname = 4 ;
	string City = 5 ;
}
// ViewCustomerAutoIncrements represents multiple rows for the
// view_customer_auto_increment DB table. Auto generated.
message ViewCustomerAutoIncrements {
	repeated ViewCustomerAutoIncrement Data = 1;
}
// ViewCustomerNoAutoIncrement represents a single row for
// view_customer_no_auto_increment DB table. Auto generated.
// Table comment: VIEW
message ViewCustomerNoAutoIncrement {
	null.String Email = 1 [(gogoproto.nullable)=false];
	string Firstname = 2 ;
	string Lastname = 3 ;
	string City = 4 ;
}
// ViewCustomerNoAutoIncrements represents multiple rows for the
// view_customer_no_auto_increment DB table. Auto generated.
message ViewCustomerNoAutoIncrements {
	repeated ViewCustomerNoAutoIncrement Data = 1;
}
